--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-chartkick": "^0.5.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
