--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartkick": "^0.5.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
+    "react-json-to-csv": "^1.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
