--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.3",
     "web3": "^1.7.3",
     "web3.storage": "^4.2.0"
